Changes in 3.7.7:
- Support for Mac ARM (provided that it runs an ARM build of Java) - thanks to @aplr #284
- SWT updated for all platforms
- Java 11 is now the minimum required (due to SWT)
- Source can be built with Java 17
- Mac vendors updated

Changes in 3.7.6:
- Many rare bug/crash fixes reported to Google Analytics
- Translations updated
- Mac vendors updated

Changes in 3.7.5:
- Upgrade SWT for all platforms, some UI alignment improvements
- Fix resolving of MAC vendors and Comments if MAC separator is changed to non-standard
- Support for NetBIOS (NBSTAT) responses containing no names (often returned by Apple devices)
- Mac vendors updated

Changes in 3.7.4:
- Allow changing of MAC address separator (many tools use "-" instead of ":") #261
- Cleanup some GUI resource leaks
- Fix "ghost hosts" on macOS if using TCPPinger #269
- Comments for hosts on LAN (tied to MAC address) will now display even if MAC fetcher is not selected, or is after the Comments fetcher #124
- Preference added to opt-out of checking for new versions #270
- Calculate IPv6 range scanning percent correctly #267
- Mac vendors updated

Changes in 3.7.3:
- Local IP address popup will now list IPv6 addresses and support IPv6 netmasks
- Support for silent uninstall on Windows #263
- Improve detection of the default primary network interface on Windows #257
- Update Linux SWT for better support for KDE dark themes #247
- Support installing of .deb packages with Java 15 #266
- Do not show first run dialog nor check version updates if run with any command-line arguments (for automation)

Changes in 3.7.2:
- Fix choosing openers from main menu on macOS #243
- Install 64-bit binary by Windows installer if Java is not detected at all #245

Changes in 3.7.1:
- Enable ICMP Echo pinger for Linux x64 only, as it requires the corresponding native .so implementation that is not available for Mac and not needed for Windows