@@ -3,6 +3,7 @@ Changes in 3.7.7:
 - SWT updated for all platforms
 - Java 11 is now the minimum required (due to SWT)
 - Source can be built with Java 17
+- If real network netmask is known (e.g. LAN), then skipping of broadcast addresses will respect that instead of always skipping .255
 - Mac vendors updated
 
 Changes in 3.7.6:
